# cangjie_multiplatform_interop

./: .gitignore  OAT.xml  README.md  README_zh.md  test.md
.gitcode/ISSUE_TEMPLATE/: bug-report.yml  bug-report_en.yml  feature-request.yml  feature-request_en.yml  question.yml  question_en.yml
.gitcode/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE_chinese.md  PULL_REQUEST_TEMPLATE_en.md
java/doc/: developer_guide.md  user_guide.md
java/src/interoplib/: $$NativeConstructorMarker.java  ClassAnalyser.java  LibraryLoader.java  MethodDef.java  c_core.c  cangjie_lang_LibraryLoader.h  jni.cj  registry.cj
java/src/interoplib/javalib/: Array.cj  Object.cj  String.cj
java/src/java-mirror-gen/: .gitignore  build.xml  java-mirror-gen.bat  java-mirror-gen.sh
java/src/java-mirror-gen/make/tools/compileproperties/: CompileProperties.java
java/src/java-mirror-gen/src/cangjie/interop/: Utils.java
java/src/java-mirror-gen/tests/: run_all.sh  run_test.sh
java/src/java-mirror-gen/tests/testData/cj_mirror_gen_bridge/: Animal.java
java/src/java-mirror-gen/tests/testData/cj_mirror_gen_bridge_public/: Animal.java  TestClass05.java
java/src/java-mirror-gen/tests/testData/cj_mirror_gen_constructor/: CalledA.java
java/src/java-mirror-gen/tests/testData/cj_mirror_gen_default_method/: I1.java  I2.java
java/test/: test-llt-java.sh
java/test/LLT/: interop_test.cfg  testlist_java
java/test/LLT/java/1-simple/: 1-simple.info
java/test/LLT/java/1-simple/original-java/: M.java  Main.java
java/test/LLT/java/2-string-parameter/: 2-string-parameter.info
java/test/LLT/java/3-hashmap-parameter/: 3-hashmap-parameter.info
java/test/LLT/java/4-exception/: 4-exception.info
java/test/LLT/java/5-arrays/: 5-arrays.info
java/test/LLT/java/6-internal-api/: 6-internal-api.info  Main.java  test.cj
java/test/RefGlueCode/java-uses-cj/tuple/: run.sh
java/test/samples/lambda-java-cj/: run.sh
java/test/samples/lambda-java-cj/cangjie/: A.cj  B.cj  Display.cj
java/test/samples/lambda-java-cj/original-java/: BChild.java  IImpl.java  ImplDefault.java  Main.java
java/test/samples/lambda-java-cj/output/: cj.cjo  interoplib.interop.cjo
objc/doc/: developer_guide.md  user_guide.md
objc/src/: .gitignore
objc/src/ObjCInteropGen/: .gitignore  1-simple.MacOS.toml  1-simple.Windows.toml  1-simple.toml  CMakeLists.txt  CMakePresets.json  CangjieWriter.cpp  CangjieWriter.h  ClangSession.h  Collection.h  Config.cpp  Config.h  Diagnostics.cpp  Diagnostics.h  Directory.Build.props  FatalException.h  InputFile.cpp  InputFile.h  Logging.cpp  Logging.h  Mappings.cpp  Mappings.h  MappingsConfig.cpp  MarkPackage.cpp  MarkPackage.h  Mode.cpp  Mode.h  ObjCInteropGen-MSBuild.slnx  ObjCInteropGen-MSBuild.vcxproj  Package.cpp  Package.h  PackageConfig.h  PackageFilters.cpp  PackageOutputs.cpp  PrintUtils.h  Readme.md  SingleDeclarationSymbolVisitor.cpp  SingleDeclarationSymbolVisitor.h  SourceScanner.cpp  SourceScanner.h  (+15 more)
objc/src/ObjCInteropGen/test/: interop-generate-definitions.cj  main.cj  test-experimental.sh  test-generate-definitions.sh  test-normal.sh  test.h  test.toml
objc/src/ObjCInteropGen/test/expected/objc/foundation/: AEDataModel.cj  CFCGTypes.cj  CFRunLoop.cj  MacTypes.cj  NSAffineTransform.cj  NSAppleEventDescriptor.cj  NSAppleEventManager.cj  NSAppleScript.cj  NSArchiver.cj  NSArray.cj  NSAttributedString.cj  NSBackgroundActivityScheduler.cj  NSBundle.cj  NSByteCountFormatter.cj  NSByteOrder.cj  NSCache.cj  NSCalendar.cj  NSCalendarDate.cj  NSCharacterSet.cj  NSClassDescription.cj  NSCoder.cj  NSComparisonPredicate.cj  NSCompoundPredicate.cj  NSConnection.cj  NSData.cj  NSDate.cj  NSDateComponentsFormatter.cj  NSDateFormatter.cj  NSDateInterval.cj  NSDateIntervalFormatter.cj  NSDecimal.cj  NSDecimalNumber.cj  NSDictionary.cj  NSDistantObject.cj  NSDistributedLock.cj  NSDistributedNotificationCenter.cj  NSEnergyFormatter.cj  NSEnumerator.cj  NSError.cj  NSException.cj  (+145 more)
objc/src/ObjCInteropGen/test/samples/: GlobalFunc.h  GlobalVar.h  InstanceMethod.h  Interface.h  NestedStruct.h  StaticMethod.h  Struct.h  Unavailable.h  samples.toml
objc/src/ObjCInteropGen/test/samples/expected/: Interface.cj  NestedStruct.cj  StaticMethod.cj  Struct.cj  Typedef.cj
objc/src/ObjCInteropGen/test/samples/mirrors/: InstanceMethod.cj  Unavailable.cj
objc/src/interoplib/: .gitignore  cjpm.toml
objc/src/interoplib/examples/: examples-cj2oc.sh  examples-oc2cj.sh  examples.sh
objc/src/interoplib/interoplib/: cjpm.toml
objc/src/interoplib/interoplib/src/: interoplib.cj
objc/src/interoplib/objc/: cjpm.toml
objc/src/interoplib/objc/src/: objc.cj
objc/src/interoplib/src/: interoplib.cj
objc/src/interoplib/src/common/: registry.cj
objc/src/interoplib/src/objc/: runtime.cj
objc/src/interoplib/src/objclib/: cjinterop.h  cjinterop.m
objc/test/LLT/: interop_test.cfg  run-llt.sh  testlist
objc/test/LLT/cj-uses-objc/ctor_without_params/: ctor_without_params.info
objc/test/LLT/objc-uses-cj/3-struct/: 3-struct-mock.info
objc/test/LLT/objc-uses-cj/4-nonopen/: 4-nonopen-mock.info
objc/test/LLT/objc-uses-cj/6-interface/: 6-interface-mock.info
objc/test/LLT/objc-uses-cj/7-enum-recursive/: 7-enum-recursive-mock.info
objc/test/LLT/objc-uses-cj/7-enum-simple/: 7-enum-simple-mock.info
objc/test/LLT/objc-uses-cj/7-enum-with-payload/: 7-enum-with-payload-mock.info
objc/test/LLT/objc-uses-cj/8-generic-class/: run.sh
objc/test/LLT/objc-uses-cj/8-generic-enum/: cjworld.cjo  libcjworld.dylib  run.sh
objc/test/LLT/objc-uses-cj/8-generic-interface/: run.sh
objc/test/LLT/objc/ctor_without_params/: ctor_without_params.info
objc/test/RefGlueCode/objc-uses-cj/: run.sh
(+172 files in other folders)
